# jipp2

./: CMakeLists.txt  README.md
PassMan/: CMakeLists.txt
PassMan/include/: Database.h  DbCrypto.h  DbManager.h  PasswordGenerator.h  main.h
PassMan/lib/openssl/include/openssl/: evp.h  opensslconf.h
PassMan/lib/openssl/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
PassMan/src/: Database.cpp  DbCrypto.cpp  DbManager.cpp  PasswordGenerator.cpp  main.cpp
Project1-Matrixes/: CMakeLists.txt
Project1-Matrixes/matrixApp/: CMakeLists.txt  main.cpp
Project1-Matrixes/matrixLib/: CMakeLists.txt  matrixLib.cpp
Project1-Matrixes/matrixLib/include/: matrixLib.h
Project1-Matrixes/matrixLib/src/: matrixLib.cpp
allocation_basics/: CMakeLists.txt  main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
lab4_struktury_i_klasy/: CMakeLists.txt
lab4_struktury_i_klasy/include/: Figura.h  FunkcjaKwadratowa.h  Kula.h  Prostopadloscian.h  PrzykladDesktruktor.h  Punkt.h  Student.h  struktury.h
lab4_struktury_i_klasy/src/: Figura.cpp  FunkcjaKwadratowa.cpp  Kula.cpp  Prostopadloscian.cpp  PrzykladDesktruktor.cpp  Punkt.cpp  Student.cpp  main.cpp  struktury.cpp
lab5/: CMakeLists.txt
lab5/include/: Pojazd.h
lab5/src/: Pojazd.cpp  main.cpp
lab8/: CMakeLists.txt
lab8/include/: ListNote.h  Note.h  NoteDirector.h  TextNote.h
lab8/src/: ListNote.cpp  Note.cpp  NoteDirector.cpp  TextNote.cpp  main.cpp
lab9/: CMakeLists.txt
lab9/StopExample/: Line.cpp  Line.h  Stop.cpp  Stop.h  VExample.cpp
lab9/include/: MP3Player.h
lab9/src/: MP3Player.cpp  main.cpp
obsluga_wyjatkow/: CMakeLists.txt
obsluga_wyjatkow/include/: exceptionHandler.h
obsluga_wyjatkow/src/: exceptionHandler.cpp  main.cpp
pole_figury/: CMakeLists.txt
pole_figury/include/: pole.h
pole_figury/src/: main.cpp  pole.cpp
przekazywanie_przez_wskazniki/: CMakeLists.txt
przekazywanie_przez_wskazniki/include/: pointers.h
przekazywanie_przez_wskazniki/src/: main.cpp  pointers.cpp
przyjmowanie_tab_jako_arg/: CMakeLists.txt  main.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
