cmake_minimum_required(VERSION 3.16)

add_subdirectory(allocation_basics)
add_subdirectory(simpleCalc)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(pole_figury)
add_subdirectory(przyjmowanie_tab_jako_arg)
add_subdirectory(przekazywanie_przez_wskazniki)
add_subdirectory(obsluga_wyjatkow)